fixes for dark mode

--- a/packages/oc-pages/project_overview/assets/global.css
+++ b/packages/oc-pages/project_overview/assets/global.css
@@ -49,7 +49,13 @@ h2.oc-title-section {
 }
 .gl-dark .deploy-action {
   background: transparent !important;
-
+}
+.view-project-link {
+  color: #4A5053;
+  padding-top: 4px;
+}
+.gl-dark .view-project-link {
+  color: #EDFCFA !important;
 }
 
 
